# migrate

./: .gitignore  BUILD  WORKSPACE
cli/: BUILD.bazel
database/: BUILD.bazel
database/cassandra/: BUILD.bazel  README.md  cassandra.go
database/clickhouse/: BUILD.bazel
database/cockroachdb/: BUILD.bazel
database/mysql/: BUILD.bazel
database/postgres/: BUILD.bazel
database/ql/: BUILD.bazel
database/redshift/: BUILD.bazel
database/spanner/: BUILD.bazel
database/sqlite3/: BUILD.bazel
database/stub/: BUILD.bazel
database/testing/: BUILD.bazel
source/: BUILD.bazel
source/aws-s3/: BUILD.bazel
source/file/: BUILD.bazel
source/github/: BUILD.bazel
source/go-bindata/: BUILD.bazel
source/go-bindata/examples/migrations/: BUILD.bazel
source/go-bindata/testdata/: BUILD.bazel
source/google-cloud-storage/: BUILD.bazel
source/stub/: BUILD.bazel
source/testing/: BUILD.bazel
testing/: BUILD.bazel
