load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build_aws-s3.go",
        "build_cassandra.go",
        "build_clickhouse.go",
        "build_cockroachdb.go",
        "build_github.go",
        "build_go-bindata.go",
        "build_google-cloud-storage.go",
        "build_mysql.go",
        "build_postgres.go",
        "build_ql.go",
        "build_redshift.go",
        "build_spanner.go",
        "build_sqlite3.go",
        "commands.go",
        "log.go",
        "main.go",
        "version.go",
    ],
    importpath = "github.com/mattes/migrate/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//database/cassandra:go_default_library",
        "//database/clickhouse:go_default_library",
        "//database/cockroachdb:go_default_library",
        "//database/mysql:go_default_library",
        "//database/postgres:go_default_library",
        "//database/ql:go_default_library",
        "//database/redshift:go_default_library",
        "//database/spanner:go_default_library",
        "//database/sqlite3:go_default_library",
        "//database/stub:go_default_library",
        "//source/aws-s3:go_default_library",
        "//source/file:go_default_library",
        "//source/github:go_default_library",
        "//source/go-bindata:go_default_library",
        "//source/google-cloud-storage:go_default_library",
        "//vendor/github.com/kshvakov/clickhouse:go_default_library",
    ],
)

go_binary(
    name = "cli",
    importpath = "github.com/mattes/migrate/cli",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
