load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "driver.go",
        "error.go",
        "util.go",
    ],
    importpath = "github.com/mattes/migrate/database",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "driver_test.go",
        "util_test.go",
    ],
    importpath = "github.com/mattes/migrate/database",
    library = ":go_default_library",
)
