load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "docker.go",
        "testing.go",
    ],
    importpath = "github.com/mattes/migrate/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/docker/docker/api/types:go_default_library",
        "//vendor/github.com/docker/docker/api/types/container:go_default_library",
        "//vendor/github.com/docker/docker/api/types/network:go_default_library",
        "//vendor/github.com/docker/docker/client:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["testing_test.go"],
    importpath = "github.com/mattes/migrate/testing",
    library = ":go_default_library",
)
