load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cockroachdb.go"],
    importpath = "github.com/mattes/migrate/database/cockroachdb",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//database:go_default_library",
        "//vendor/github.com/cockroachdb/cockroach-go/crdb:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cockroachdb_test.go"],
    importpath = "github.com/mattes/migrate/database/cockroachdb",
    library = ":go_default_library",
    deps = [
        "//database/testing:go_default_library",
        "//testing:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
    ],
)
