load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "github.com/mattes/migrate/database/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//database:go_default_library",
        "//vendor/github.com/go-sql-driver/mysql:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mysql_test.go"],
    importpath = "github.com/mattes/migrate/database/mysql",
    library = ":go_default_library",
    deps = [
        "//database/testing:go_default_library",
        "//testing:go_default_library",
    ],
)
