load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stub.go"],
    importpath = "github.com/mattes/migrate/database/stub",
    visibility = ["//visibility:public"],
    deps = ["//database:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["stub_test.go"],
    importpath = "github.com/mattes/migrate/database/stub",
    library = ":go_default_library",
    deps = ["//database/testing:go_default_library"],
)
