load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["s3.go"],
    importpath = "github.com/mattes/migrate/source/aws-s3",
    visibility = ["//visibility:public"],
    deps = [
        "//source:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3/s3iface:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["s3_test.go"],
    importpath = "github.com/mattes/migrate/source/aws-s3",
    library = ":go_default_library",
    deps = [
        "//source:go_default_library",
        "//source/testing:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
    ],
)
