load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["github.go"],
    importpath = "github.com/mattes/migrate/source/github",
    visibility = ["//visibility:public"],
    deps = [
        "//source:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["github_test.go"],
    importpath = "github.com/mattes/migrate/source/github",
    library = ":go_default_library",
    deps = ["//source/testing:go_default_library"],
)
