load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/mattes/migrate/source/google-cloud-storage",
    visibility = ["//visibility:public"],
    deps = [
        "//source:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    importpath = "github.com/mattes/migrate/source/google-cloud-storage",
    library = ":go_default_library",
    deps = [
        "//source:go_default_library",
        "//source/testing:go_default_library",
        "//vendor/github.com/fsouza/fake-gcs-server/fakestorage:go_default_library",
    ],
)
